manifests/service-gke-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-lb
  namespace: chatbot
  annotations:
    cloud.google.com/l4-rbs: "enabled"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: chatbot
  ports:
    - name: http
      port: 80
      targetPort: http
