manifests/service-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  namespace: chatbot
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: chatbot
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
